fix presentation picture bug on safari

--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,7 @@
   height: 100vh;
   object-fit: cover;
   object-position: top;
+  border-radius: 0 20vw 0 20vw;
 }
 
 .presentation-container-right p {
